--- a/MyPage.css
+++ b/MyPage.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("image.png");
+    background-image: url("rep.jpg");
     position: center;
     background-repeat: no-repeat;
 }
