--- a/MyPage.css
+++ b/MyPage.css
@@ -2,4 +2,5 @@ body{
     background-image: url("rep.jpg");
     position: center;
     background-repeat: no-repeat;
+    background-color: red;
 }
