--- a/MyPage.css
+++ b/MyPage.css
@@ -1,6 +1,81 @@
-body{
-    background-image: url("rep.jpg");
-    position: center;
-    background-repeat: no-repeat;
-    background-color: red;
+
+.pageHead {
+    text-align: center;
+    background-image: url(4.jpg);
+    background-repeat: repeat;    
+    height: 200px;
+    width: 100%;    
+    color: white;
+    margin: center;
+  
+}
+    
+
+.pageHead h1 {
+    color: white;
+    font-size: 50px;
+    line-height: 150px;
+    vertical-align: middle;
+}
+
+.top_menu {
+    text-align: center;
+    
+    width: 100%;
+    line-height: 36px;
+    height: 36px;
+    vertical-align: middle;
+    border-style: double;
+    border-width: 4px;
+}
+
+.myProject{
+    
+    text-align: center;
+    font-size: 50px;
+    line-height: 100px;
+    
+    color: #e884b6;
+    
+    
+}
+
+.projects{
+    background-color: antiquewhite;
+    margin: 5px;
+    padding: 10px;
+    border: 3px solid  #e884b6;
+    width: 170px;
+    height: 150px;
+    float: left;
+   
+    
+}
+
+ul {
+  list-style-type: none;
+  margin: 20px;
+  padding: 10px;
+  width: 200px;
+  background-color: #f1f1f1;
+}
+
+li {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
+
+
+li:hover {
+  background-color: #596b6e;
+  color: white;
+  
+   
+    transition: 300px 3s;
+}
+
+.information{
+    margin:150px 50px;
 }
