--- a/MyGitHubPage.css
+++ b/MyGitHubPage.css
@@ -1,4 +1,7 @@
 
+body{
+    background-color:azure
+}
 .pageHead {
     text-align: center;
     background-image: url(4.jpg);
@@ -35,16 +38,16 @@
     font-size: 50px;
     line-height: 100px;
     
-    color: #e884b6;
+    color: #87CEEB;
     
     
 }
 
 .projects{
-    background-color: antiquewhite;
+    background-color: #ccd9ff;
     margin: 5px;
     padding: 10px;
-    border: 3px solid  #e884b6;
+    border: 3px solid  #87CEEB;;
     width: 170px;
     height: 150px;
     float: left;
